[package]
name = "moho"
version = "0.0.10"
authors = ["Andres <andresnrx@gmail.com>"]
description = "Barebones Rust Game Library"
license = "MIT"

[dependencies]
glm = ">=0.2.2"
num-traits = ">=0.1.36"
error-chain = ">=0.9"
take_mut = ">=0.2.0"

[dependencies.sdl2]
version = ">=0.31.0"
default-features = false
features = ["image", "ttf"]
