[package]
name = "moho"
version = "0.0.10"
authors = ["Andres <andresnrx@gmail.com>"]
description = "Barebones Rust Game Library"
license = "MIT"
edition = "2018"

[dependencies]
glm = "0.2"
num-traits = "0.2"
failure = "0.1"
moho-derive = { path = "./moho-derive" }

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image", "ttf"]

[workspace]
members = [".", "moho-derive"]
