[package]
name = "moho-derive"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]

[dependencies]
syn = ">=0.12"
quote = ">=0.4"

[dependencies.synstructure]
git = "https://github.com/nrxus/synstructure"
branch = "specific_bounds"

[dev-dependencies.moho]
git = "https://github.com/nrxus/moho"

[lib]
proc-macro = true